--- a/iOSViewHierarchy/webapp/style.css
+++ b/iOSViewHierarchy/webapp/style.css
@@ -1,3 +1,5 @@
+/* @override http://127.0.0.1:9449/style.css */
+
     html, body, div, ul, li, table, tr, td, tbody
     {
         padding: 0px; margin: 0px; list-style: none;
@@ -6,10 +8,11 @@
     	-webkit-user-select: none;  
    		-ms-user-select: none; 
    		user-select: none;
+   		font-family: SlatePro;
     }
     body
     {
-        background: #3c5a75;
+        background: #fff;
     }
     table, tr, td, tbody
     {
@@ -46,17 +49,17 @@
     .datatable th
     {
         text-align: center;
-        background: #213140;
+        background: #7e7e7e;
         padding: 2px;
-        color: white;
-        font-family: Verdana;
+        color: #fff;
+        font-family: SlatePro;
         font-weight: normal;
         font-size: 13px;
         border: 1px solid black;
     }
     .datatable tr:hover
     {
-        background: #c2c25f;
+        background: #d0d0ca;
         color: #000;
     }
     .datatable td
@@ -64,8 +67,9 @@
         text-align: center;
         padding: 3px;
         border: 1px solid black;
-        font-family: Verdana;
+        font-family: SlatePro;
         font-size: 11px;
+        color: #262626;
     }
     .datatable_empty
     {
@@ -76,11 +80,11 @@
         right: 0px;
         text-align: center;
         font-size: 11px;
-        font-family: Verdana;
+        font-family: SlatePro;
     }
     .entities_list
     {
-        position: fixed;
+        /* position: fixed; */
         top: 58px;
         left: 0px;
         width: 220px;
@@ -90,9 +94,9 @@
     }
     .entities_list_item
     {
-        color: white;
-        font-size: 13px;
-        font-family: Arial;
+        color: #262626;
+        font-size: 15px;
+        font-family: SlatePro;
         padding-bottom: 4px;
         padding-left: 5px;
         padding-right: 5px;
@@ -103,12 +107,12 @@
     }
     .entities_list_item:hover
     {
-        background: #21011F;
+        font-weight: 200;
     }
     .entities_list_item[data-selected="1"]
     {
-        background: #213140;
-        color: #FF9;
+		font-weight: bold;
+        color: #262626;
     }
     .context_query
     {
@@ -121,11 +125,11 @@
         line-height: 23px;
         outline: none;
         border: 0px;
-        box-shadow: inset 0px 0px 22px #444;
+        /*box-shadow: inset 0px 0px 22px #444;*/
         color: #EEE;
-        font-family: Verdana;
+        font-family: SlatePro;
         font-size: 14px;
-        border-radius: 10px;
+        border-radius: 4px;
         padding-left: 8px;
         padding-right: 8px;
         font-weight: normal;
@@ -141,7 +145,7 @@
         left: 0px;
         right: 0px;
         height: 33px;
-        background: #222;
+        background: #7e7e7e;
         line-height: 23px;
     }
     .context_list_item
@@ -153,8 +157,7 @@
         display: inline-block;
         padding-right: 5px;
         border: 1px solid #444;
-        text-shadow: 0px 1px 2px black;
-        font-family: Arial;
+        font-family: SlatePro;
         font-size: 13px;
         margin: 4px;
         border-radius: 5px;
@@ -165,13 +168,13 @@
     }
     .context_list_item[data-selected="1"]
     {
-        background: #213140;
-        color: #FF9;
+        /*background: #213140;*/
+        color: white;
     }
     .tree_parent
     {
 		display: inline-block;
-		border-right: 2px dotted #000;
+		border-right: 1px solid #000;
 		padding: 5px;
 		position: fixed;
 		top: 25px;
@@ -183,15 +186,13 @@
     .tree_expand
     {
 		color: white;
-		text-shadow: 0px 1px 2px black;
 		display: inline;
 		white-space: nowrap;
 		font-size: 22px;
     }
     .tree_node_name
     {
-		color: white;
-		text-shadow: 0px 1px 2px black;
+		color: #262626;
 		display: inline;
 		padding-left: 2px;
 		padding-right: 5px;
@@ -199,15 +200,13 @@
     }
     .tree_node_name:hover
     {
-        background: #21011F;
+		font-weight: bold;
         border-radius: 3px;
-        box-shadow: 0px 0px 3px #213140;
     }
     .tree_node_name_selected
     {
-        background: #213140;
+		font-weight: bold;
         border-radius: 3px;
-        box-shadow: 0px 0px 3px #213140;
     }
     .tree_node_name:active
     {	
@@ -265,13 +264,12 @@
 		font-size: 25px;
 		width: 20px;
 		text-align: center;
-		color: white;
-		text-shadow: 0px 1px 1px black;
+		color: #000;
 		font-weight: bold;
     }
     .screen_zoom:hover
     {
-    	color: #CCC;
+    	color: #000;
     }
     .screen_zoom:active
     {
@@ -319,8 +317,8 @@
 		left: 0px;
 		right: 0px;
 		height: 25px;
-		color: white;
-		background: #333;
+		color: #262626;
+		background: #fff;
 		box-shadow: 0px 0px 10px #000;
     }
     .navbar_title
@@ -329,7 +327,6 @@
 		top: 0px;
 		bottom: 0px;
 		right: 20px;
-		text-shadow: 0px 1px 2px black;
 		line-height: 25px;
 		font-size: 21px;
     }
@@ -340,14 +337,14 @@
 		left: 50%;
 		margin-left: -50px;
 		font-size: 19px;
-		color: yellow;
+		color: #262626;
     }
     .editor_parent
     {
     	position: fixed;
     	top: 25px;
     	bottom: 0px;
-    	border-left: 2px dotted #000;
+    	border-left: 1px solid #000;
     	width: 251px;
     	right: 0px;
     	overflow: auto;
@@ -356,9 +353,8 @@
     {
 		padding: 5px;
 		font-size: 18px;
-		color: #CCC;
-		background: #222;
-		text-shadow: 0px 1px 1px black;
+		color: #fff;
+		background: #7e7e7e;
     }
     .editor_row_empty
     {
@@ -370,9 +366,8 @@
     .editor_row_value
     {
     	display: inline;
-    	color: #FF9;
+    	color: #262626;
     	font-size: 15px;
-    	text-shadow: 0px 1px 1px black;
     	background: transparent;
     	outline: none;
     	border: 0px;   
@@ -389,18 +384,16 @@
     }
     .editor_row_type
     {
-		display: block;a
+		display: block;
 		padding: 1px;
 		overflow: hidden;
-		color: #59F;
-		text-shadow: 0px 1px 1px black;
+		color: #0073bc;
     }
     .editor_row_name
     {
   		display: inline-block;
 		font-size: 15px;
-		color: white;
-		text-shadow: 0px 1px 1px black; 	
+		color: #262626;
     }
     .editor_row_parent
     {
@@ -411,7 +404,7 @@
     }
     .editor_row_parent:hover
     {
-    	background: #2c4a65;
+    	background: #d0d0ca;
     }
     .editor_row_parent:active
     {
@@ -445,4 +438,9 @@
     	opacity: 0.8;
     	-moz-opacity: 0.8;
     	filter:alpha(opacity=8);
+    }
+    .accessibilityLabel:before {
+        content: "\2666";
+        color: red;
+        font-size: 8px; 
     }
